HW3/ProfLee_HW3_Template/y.output
   0  $accept : program $end

   1  program :
   2          | extdefs

   3  extdefs : extdef
   4          | extdefs extdef

   5  extdef : TYPESPEC notype_declarator ';'

   6  $$1 :

   7  $$2 :

   8  $$3 :

   9  extdef : TYPESPEC notype_declarator $$1 '{' xdecls $$2 stmts $$3 '}'
  10         | error ';'
  11         | ';'

  12  exprs : expr_no_commas
  13        | expr_no_commas ',' exprs

  14  expr_no_commas : primary
  15                 | expr_no_commas '+' expr_no_commas
  16                 | expr_no_commas '=' expr_no_commas
  17                 | expr_no_commas '*' expr_no_commas
  18                 | expr_no_commas ARITHCOMPARE expr_no_commas

  19  primary : IDENTIFIER
  20          | CONSTANT
  21          | STRING
  22          | primary PLUSPLUS
  23          | IDENTIFIER '(' exprs ')'

  24  notype_declarator : notype_declarator '(' parmlist ')'
  25                    | IDENTIFIER

  26  parmlist :
  27           | parms

  28  parms : parm
  29        | parms ',' parm

  30  parm : TYPESPEC notype_declarator

  31  stmts : stmt
  32        | stmts stmt

  33  stmt : expr_no_commas ';'

  34  xdecls :
  35         | decls

  36  decls : decl
  37        | decls decl

  38  decl : TYPESPEC notype_declarator ';'
  39       | TYPESPEC notype_declarator '=' primary ';'

state 0
	$accept : . program $end  (0)
	program : .  (1)

	error  shift 1
	TYPESPEC  shift 2
	';'  shift 3
	$end  reduce 1

	program  goto 4
	extdefs  goto 5
	extdef  goto 6


state 1
	extdef : error . ';'  (10)

	';'  shift 7
	.  error


state 2
	extdef : TYPESPEC . notype_declarator ';'  (5)
	extdef : TYPESPEC . notype_declarator $$1 '{' xdecls $$2 stmts $$3 '}'  (9)

	IDENTIFIER  shift 8
	.  error

	notype_declarator  goto 9


state 3
	extdef : ';' .  (11)

	.  reduce 11


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : extdefs .  (2)
	extdefs : extdefs . extdef  (4)

	error  shift 1
	TYPESPEC  shift 2
	';'  shift 3
	$end  reduce 2

	extdef  goto 10


state 6
	extdefs : extdef .  (3)

	.  reduce 3


state 7
	extdef : error ';' .  (10)

	.  reduce 10


state 8
	notype_declarator : IDENTIFIER .  (25)

	.  reduce 25


state 9
	extdef : TYPESPEC notype_declarator . ';'  (5)
	extdef : TYPESPEC notype_declarator . $$1 '{' xdecls $$2 stmts $$3 '}'  (9)
	notype_declarator : notype_declarator . '(' parmlist ')'  (24)
	$$1 : .  (6)

	';'  shift 11
	'('  shift 12
	'{'  reduce 6

	$$1  goto 13


state 10
	extdefs : extdefs extdef .  (4)

	.  reduce 4


state 11
	extdef : TYPESPEC notype_declarator ';' .  (5)

	.  reduce 5


state 12
	notype_declarator : notype_declarator '(' . parmlist ')'  (24)
	parmlist : .  (26)

	TYPESPEC  shift 14
	')'  reduce 26

	parmlist  goto 15
	parms  goto 16
	parm  goto 17


state 13
	extdef : TYPESPEC notype_declarator $$1 . '{' xdecls $$2 stmts $$3 '}'  (9)

	'{'  shift 18
	.  error


state 14
	parm : TYPESPEC . notype_declarator  (30)

	IDENTIFIER  shift 8
	.  error

	notype_declarator  goto 19


state 15
	notype_declarator : notype_declarator '(' parmlist . ')'  (24)

	')'  shift 20
	.  error


state 16
	parmlist : parms .  (27)
	parms : parms . ',' parm  (29)

	','  shift 21
	')'  reduce 27


state 17
	parms : parm .  (28)

	.  reduce 28


state 18
	extdef : TYPESPEC notype_declarator $$1 '{' . xdecls $$2 stmts $$3 '}'  (9)
	xdecls : .  (34)

	TYPESPEC  shift 22
	IDENTIFIER  reduce 34
	CONSTANT  reduce 34
	STRING  reduce 34

	xdecls  goto 23
	decls  goto 24
	decl  goto 25


state 19
	notype_declarator : notype_declarator . '(' parmlist ')'  (24)
	parm : TYPESPEC notype_declarator .  (30)

	'('  shift 12
	','  reduce 30
	')'  reduce 30


state 20
	notype_declarator : notype_declarator '(' parmlist ')' .  (24)

	.  reduce 24


state 21
	parms : parms ',' . parm  (29)

	TYPESPEC  shift 14
	.  error

	parm  goto 26


state 22
	decl : TYPESPEC . notype_declarator ';'  (38)
	decl : TYPESPEC . notype_declarator '=' primary ';'  (39)

	IDENTIFIER  shift 8
	.  error

	notype_declarator  goto 27


state 23
	extdef : TYPESPEC notype_declarator $$1 '{' xdecls . $$2 stmts $$3 '}'  (9)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 28


state 24
	xdecls : decls .  (35)
	decls : decls . decl  (37)

	TYPESPEC  shift 22
	IDENTIFIER  reduce 35
	CONSTANT  reduce 35
	STRING  reduce 35

	decl  goto 29


state 25
	decls : decl .  (36)

	.  reduce 36


state 26
	parms : parms ',' parm .  (29)

	.  reduce 29


state 27
	notype_declarator : notype_declarator . '(' parmlist ')'  (24)
	decl : TYPESPEC notype_declarator . ';'  (38)
	decl : TYPESPEC notype_declarator . '=' primary ';'  (39)

	';'  shift 30
	'='  shift 31
	'('  shift 12
	.  error


state 28
	extdef : TYPESPEC notype_declarator $$1 '{' xdecls $$2 . stmts $$3 '}'  (9)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 36
	stmts  goto 37
	stmt  goto 38


state 29
	decls : decls decl .  (37)

	.  reduce 37


state 30
	decl : TYPESPEC notype_declarator ';' .  (38)

	.  reduce 38


state 31
	decl : TYPESPEC notype_declarator '=' . primary ';'  (39)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 39


state 32
	primary : IDENTIFIER .  (19)
	primary : IDENTIFIER . '(' exprs ')'  (23)

	'('  shift 40
	';'  reduce 19
	','  reduce 19
	'='  reduce 19
	ARITHCOMPARE  reduce 19
	'+'  reduce 19
	'*'  reduce 19
	PLUSPLUS  reduce 19
	')'  reduce 19


state 33
	primary : CONSTANT .  (20)

	.  reduce 20


state 34
	primary : STRING .  (21)

	.  reduce 21


state 35
	expr_no_commas : primary .  (14)
	primary : primary . PLUSPLUS  (22)

	PLUSPLUS  shift 41
	';'  reduce 14
	','  reduce 14
	'='  reduce 14
	ARITHCOMPARE  reduce 14
	'+'  reduce 14
	'*'  reduce 14
	')'  reduce 14


state 36
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)
	stmt : expr_no_commas . ';'  (33)

	';'  shift 42
	'='  shift 43
	ARITHCOMPARE  shift 44
	'+'  shift 45
	'*'  shift 46
	.  error


state 37
	extdef : TYPESPEC notype_declarator $$1 '{' xdecls $$2 stmts . $$3 '}'  (9)
	stmts : stmts . stmt  (32)
	$$3 : .  (8)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	'}'  reduce 8

	primary  goto 35
	expr_no_commas  goto 36
	$$3  goto 47
	stmt  goto 48


state 38
	stmts : stmt .  (31)

	.  reduce 31


state 39
	primary : primary . PLUSPLUS  (22)
	decl : TYPESPEC notype_declarator '=' primary . ';'  (39)

	';'  shift 49
	PLUSPLUS  shift 41
	.  error


state 40
	primary : IDENTIFIER '(' . exprs ')'  (23)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 50
	exprs  goto 51


state 41
	primary : primary PLUSPLUS .  (22)

	.  reduce 22


state 42
	stmt : expr_no_commas ';' .  (33)

	.  reduce 33


state 43
	expr_no_commas : expr_no_commas '=' . expr_no_commas  (16)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 52


state 44
	expr_no_commas : expr_no_commas ARITHCOMPARE . expr_no_commas  (18)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 53


state 45
	expr_no_commas : expr_no_commas '+' . expr_no_commas  (15)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 54


state 46
	expr_no_commas : expr_no_commas '*' . expr_no_commas  (17)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 55


state 47
	extdef : TYPESPEC notype_declarator $$1 '{' xdecls $$2 stmts $$3 . '}'  (9)

	'}'  shift 56
	.  error


state 48
	stmts : stmts stmt .  (32)

	.  reduce 32


state 49
	decl : TYPESPEC notype_declarator '=' primary ';' .  (39)

	.  reduce 39


state 50
	exprs : expr_no_commas .  (12)
	exprs : expr_no_commas . ',' exprs  (13)
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)

	','  shift 57
	'='  shift 43
	ARITHCOMPARE  shift 44
	'+'  shift 45
	'*'  shift 46
	')'  reduce 12


state 51
	primary : IDENTIFIER '(' exprs . ')'  (23)

	')'  shift 58
	.  error


state 52
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas '=' expr_no_commas .  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)

	'='  shift 43
	ARITHCOMPARE  shift 44
	'+'  shift 45
	'*'  shift 46
	';'  reduce 16
	','  reduce 16
	')'  reduce 16


state 53
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)
	expr_no_commas : expr_no_commas ARITHCOMPARE expr_no_commas .  (18)

	'+'  shift 45
	'*'  shift 46
	';'  reduce 18
	','  reduce 18
	'='  reduce 18
	ARITHCOMPARE  reduce 18
	')'  reduce 18


state 54
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas '+' expr_no_commas .  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)

	'*'  shift 46
	';'  reduce 15
	','  reduce 15
	'='  reduce 15
	ARITHCOMPARE  reduce 15
	'+'  reduce 15
	')'  reduce 15


state 55
	expr_no_commas : expr_no_commas . '+' expr_no_commas  (15)
	expr_no_commas : expr_no_commas . '=' expr_no_commas  (16)
	expr_no_commas : expr_no_commas . '*' expr_no_commas  (17)
	expr_no_commas : expr_no_commas '*' expr_no_commas .  (17)
	expr_no_commas : expr_no_commas . ARITHCOMPARE expr_no_commas  (18)

	.  reduce 17


state 56
	extdef : TYPESPEC notype_declarator $$1 '{' xdecls $$2 stmts $$3 '}' .  (9)

	.  reduce 9


state 57
	exprs : expr_no_commas ',' . exprs  (13)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	STRING  shift 34
	.  error

	primary  goto 35
	expr_no_commas  goto 50
	exprs  goto 59


state 58
	primary : IDENTIFIER '(' exprs ')' .  (23)

	.  reduce 23


state 59
	exprs : expr_no_commas ',' exprs .  (13)

	.  reduce 13


59 terminals, 19 nonterminals
40 grammar rules, 60 states
